Hide overflow in Gallery to prevent layout shift

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -6,6 +6,7 @@
     justify-content: center;
     flex-wrap: wrap;
     background-color: cornsilk;
+    overflow: hidden;
 }
 
 .gallery.disable-animations *, 
